[package]
name = "datetime"
description = "Library for date and time formatting and arithmetic"

authors = [ "ogham@bsago.me", "Hendrik Sollich <hendrik@hoodie.de>" ]
documentation = "http://datetime.rustdocs.org/datetime/"
homepage = "https://github.com/rust-datetime/datetime"
license = "MIT"
readme = "README.md"
version = "0.4.3"

[lib]
name = "datetime"

[dependencies]
iso8601 = "0.1.0"
libc = "0.2"
locale = "0.2"
num = "0.1"
pad = "0.1"
quick-error = "1.0"
range_check = "0.1"

quickcheck = { version = "0.2", optional = true }
rand       = { version = "0.3", optional = true }

[features]
default = [ "quickcheck_impls", "rand_impls" ]
quickcheck_impls = [ "quickcheck" ]
rand_impls = [ "rand" ]


[dev-dependencies]
rand = "0.3"
quickcheck = "0.2"
quickcheck_macros = "0.2"

regex = "0.1"
rustc-serialize = "0.3"
